@@ -118,6 +118,14 @@ type InsideLabel {
 
 enum InsideLabelLocation {
   TOP_CENTER
+  TOP_LEFT
+  TOP_RIGHT
+  BOTTOM_CENTER
+  BOTTOM_LEFT
+  BOTTOM_RIGHT
+  MIDDLE_CENTER
+  MIDDLE_LEFT
+  MIDDLE_RIGHT
 }
 
 enum LabelOverflowStrategy {
