@@ -206,6 +206,14 @@ _UI_NodeContainmentKind_BORDER_NODE_literal=BORDER_NODE
 _UI_SynchronizationPolicy_SYNCHRONIZED_literal=SYNCHRONIZED
 _UI_SynchronizationPolicy_UNSYNCHRONIZED_literal=UNSYNCHRONIZED
 _UI_InsideLabelPosition_TOP_CENTER_literal=TOP_CENTER
+_UI_InsideLabelPosition_TOP_LEFT_literal = TOP_LEFT
+_UI_InsideLabelPosition_TOP_RIGHT_literal = TOP_RIGHT
+_UI_InsideLabelPosition_MIDDLE_LEFT_literal = MIDDLE_LEFT
+_UI_InsideLabelPosition_MIDDLE_CENTER_literal = MIDDLE_CENTER
+_UI_InsideLabelPosition_MIDDLE_RIGHT_literal = MIDDLE_RIGHT
+_UI_InsideLabelPosition_BOTTOM_LEFT_literal = BOTTOM_LEFT
+_UI_InsideLabelPosition_BOTTOM_CENTER_literal = BOTTOM_CENTER
+_UI_InsideLabelPosition_BOTTOM_RIGHT_literal = BOTTOM_RIGHT
 _UI_OutsideLabelPosition_BOTTOM_CENTER_literal=BOTTOM_CENTER
 _UI_LabelOverflowStrategy_NONE_literal=NONE
 _UI_LabelOverflowStrategy_WRAP_literal=WRAP
